--- a/machine_learning/hyperparameters/gridsearchcv.ipynb
+++ b/machine_learning/hyperparameters/gridsearchcv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d07fb1f7",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "404cbae4",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "51  versicolor  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c3ac7f3b",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b4149550",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "0.9555555555555556"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9604b117",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
        "array([1.        , 1.        , 0.9       , 0.96666667, 1.        ])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ff89f0e9",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
        "array([0.96666667, 1.        , 0.96666667, 0.96666667, 1.        ])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "5f376188",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
        "array([0.96666667, 1.        , 0.9       , 0.96666667, 1.        ])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "f34eeadc",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        " 'linear_20': 0.9666666666666666}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "63fe4b21",
    "metadata": {},
    "outputs": [
@@ -305,10 +305,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.000699</td>\n",
-       "      <td>0.000280</td>\n",
-       "      <td>0.000311</td>\n",
-       "      <td>0.000042</td>\n",
+       "      <td>0.000609</td>\n",
+       "      <td>0.000142</td>\n",
+       "      <td>0.000328</td>\n",
+       "      <td>0.000106</td>\n",
        "      <td>1</td>\n",
        "      <td>rbf</td>\n",
        "      <td>{'C': 1, 'kernel': 'rbf'}</td>\n",
@@ -323,10 +323,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.000323</td>\n",
-       "      <td>0.000015</td>\n",
-       "      <td>0.000164</td>\n",
-       "      <td>0.000006</td>\n",
+       "      <td>0.000308</td>\n",
+       "      <td>0.000014</td>\n",
+       "      <td>0.000156</td>\n",
+       "      <td>0.000002</td>\n",
        "      <td>1</td>\n",
        "      <td>linear</td>\n",
        "      <td>{'C': 1, 'kernel': 'linear'}</td>\n",
@@ -341,10 +341,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.000462</td>\n",
-       "      <td>0.000071</td>\n",
-       "      <td>0.000258</td>\n",
-       "      <td>0.000075</td>\n",
+       "      <td>0.000473</td>\n",
+       "      <td>0.000100</td>\n",
+       "      <td>0.000263</td>\n",
+       "      <td>0.000058</td>\n",
        "      <td>10</td>\n",
        "      <td>rbf</td>\n",
        "      <td>{'C': 10, 'kernel': 'rbf'}</td>\n",
@@ -360,9 +360,9 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.000300</td>\n",
-       "      <td>0.000023</td>\n",
-       "      <td>0.000149</td>\n",
-       "      <td>0.000002</td>\n",
+       "      <td>0.000018</td>\n",
+       "      <td>0.000154</td>\n",
+       "      <td>0.000003</td>\n",
        "      <td>10</td>\n",
        "      <td>linear</td>\n",
        "      <td>{'C': 10, 'kernel': 'linear'}</td>\n",
@@ -377,10 +377,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.000468</td>\n",
-       "      <td>0.000118</td>\n",
-       "      <td>0.000227</td>\n",
-       "      <td>0.000038</td>\n",
+       "      <td>0.000411</td>\n",
+       "      <td>0.000013</td>\n",
+       "      <td>0.000211</td>\n",
+       "      <td>0.000007</td>\n",
        "      <td>20</td>\n",
        "      <td>rbf</td>\n",
        "      <td>{'C': 20, 'kernel': 'rbf'}</td>\n",
@@ -395,10 +395,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.000337</td>\n",
-       "      <td>0.000047</td>\n",
-       "      <td>0.000160</td>\n",
-       "      <td>0.000006</td>\n",
+       "      <td>0.000397</td>\n",
+       "      <td>0.000141</td>\n",
+       "      <td>0.000174</td>\n",
+       "      <td>0.000031</td>\n",
        "      <td>20</td>\n",
        "      <td>linear</td>\n",
        "      <td>{'C': 20, 'kernel': 'linear'}</td>\n",
@@ -417,12 +417,12 @@
       ],
       "text/plain": [
        "   mean_fit_time  std_fit_time  mean_score_time  std_score_time param_C  \\\n",
-       "0       0.000699      0.000280         0.000311        0.000042       1   \n",
-       "1       0.000323      0.000015         0.000164        0.000006       1   \n",
-       "2       0.000462      0.000071         0.000258        0.000075      10   \n",
-       "3       0.000300      0.000023         0.000149        0.000002      10   \n",
-       "4       0.000468      0.000118         0.000227        0.000038      20   \n",
-       "5       0.000337      0.000047         0.000160        0.000006      20   \n",
+       "0       0.000609      0.000142         0.000328        0.000106       1   \n",
+       "1       0.000308      0.000014         0.000156        0.000002       1   \n",
+       "2       0.000473      0.000100         0.000263        0.000058      10   \n",
+       "3       0.000300      0.000018         0.000154        0.000003      10   \n",
+       "4       0.000411      0.000013         0.000211        0.000007      20   \n",
+       "5       0.000397      0.000141         0.000174        0.000031      20   \n",
        "\n",
        "  param_kernel                         params  split0_test_score  \\\n",
        "0          rbf      {'C': 1, 'kernel': 'rbf'}           0.966667   \n",
@@ -449,7 +449,7 @@
        "5         0.966667        0.042164                6  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "7a8b4cb0",
    "metadata": {},
    "outputs": [
@@ -552,7 +552,7 @@
        "5      20       linear         0.966667"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "52eff03d",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
        "0.9800000000000001"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "63776b9f",
    "metadata": {},
    "outputs": [
@@ -594,7 +594,7 @@
        "{'C': 1, 'kernel': 'rbf'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,6 +602,205 @@
    "source": [
     "clf.best_params_"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "29647841",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>param_C</th>\n",
+       "      <th>param_kernel</th>\n",
+       "      <th>mean_test_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>linear</td>\n",
+       "      <td>0.973333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>rbf</td>\n",
+       "      <td>0.980000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  param_C param_kernel  mean_test_score\n",
+       "0      10       linear         0.973333\n",
+       "1       1          rbf         0.980000"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "rs = RandomizedSearchCV(svm.SVC(gamma='auto'), {\n",
+    "        'C': [1,10,20],\n",
+    "        'kernel': ['rbf','linear']\n",
+    "    }, \n",
+    "    cv=5, \n",
+    "    return_train_score=False, \n",
+    "    n_iter=2\n",
+    ")\n",
+    "rs.fit(iris.data, iris.target)\n",
+    "pd.DataFrame(rs.cv_results_)[['param_C','param_kernel','mean_test_score']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "67bb1fbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import svm\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "model_params = {\n",
+    "    'svm': {\n",
+    "        'model': svm.SVC(gamma='auto'),\n",
+    "        'params' : {\n",
+    "            'C': [1,10,20],\n",
+    "            'kernel': ['rbf','linear']\n",
+    "        }  \n",
+    "    },\n",
+    "    'random_forest': {\n",
+    "        'model': RandomForestClassifier(),\n",
+    "        'params' : {\n",
+    "            'n_estimators': [1,5,10]\n",
+    "        }\n",
+    "    },\n",
+    "    'logistic_regression' : {\n",
+    "        'model': LogisticRegression(solver='liblinear',multi_class='auto'),\n",
+    "        'params': {\n",
+    "            'C': [1,5,10]\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c36f9ee1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>best_score</th>\n",
+       "      <th>best_params</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>svm</td>\n",
+       "      <td>0.980000</td>\n",
+       "      <td>{'C': 1, 'kernel': 'rbf'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>random_forest</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>{'n_estimators': 1}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>logistic_regression</td>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>{'C': 5}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 model  best_score                best_params\n",
+       "0                  svm    0.980000  {'C': 1, 'kernel': 'rbf'}\n",
+       "1        random_forest    0.966667        {'n_estimators': 1}\n",
+       "2  logistic_regression    0.966667                   {'C': 5}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores = []\n",
+    "\n",
+    "for model_name, mp in model_params.items():\n",
+    "    clf =  GridSearchCV(mp['model'], mp['params'], cv=5, return_train_score=False)\n",
+    "    clf.fit(iris.data, iris.target)\n",
+    "    scores.append({\n",
+    "        'model': model_name,\n",
+    "        'best_score': clf.best_score_,\n",
+    "        'best_params': clf.best_params_\n",
+    "    })\n",
+    "    \n",
+    "df = pd.DataFrame(scores,columns=['model','best_score','best_params'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e878522d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
