--- a/machine_learning/regression_data_science/bangalorehomeprices.ipynb
+++ b/machine_learning/regression_data_science/bangalorehomeprices.ipynb
@@ -392,15 +392,538 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "79a6c6e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/2y/9t5g33rn5lb2c4w3lmkt75cr0000gn/T/ipykernel_68389/3999863029.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df3['bhk'] = df3['size'].apply(lambda x: int(x.split(' ')[0]))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location</th>\n",
+       "      <th>size</th>\n",
+       "      <th>total_sqft</th>\n",
+       "      <th>bath</th>\n",
+       "      <th>price</th>\n",
+       "      <th>bhk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Electronic City Phase II</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1056</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>39.07</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Chikka Tirupathi</td>\n",
+       "      <td>4 Bedroom</td>\n",
+       "      <td>2600</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>120.00</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Uttarahalli</td>\n",
+       "      <td>3 BHK</td>\n",
+       "      <td>1440</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>62.00</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Lingadheeranahalli</td>\n",
+       "      <td>3 BHK</td>\n",
+       "      <td>1521</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>95.00</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Kothanur</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>51.00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   location       size total_sqft  bath   price  bhk\n",
+       "0  Electronic City Phase II      2 BHK       1056   2.0   39.07    2\n",
+       "1          Chikka Tirupathi  4 Bedroom       2600   5.0  120.00    4\n",
+       "2               Uttarahalli      3 BHK       1440   2.0   62.00    3\n",
+       "3        Lingadheeranahalli      3 BHK       1521   3.0   95.00    3\n",
+       "4                  Kothanur      2 BHK       1200   2.0   51.00    2"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# normalizing the column `size` \n",
     "df3['bhk'] = df3['size'].apply(lambda x: int(x.split(' ')[0]))\n",
     "df3.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2e9c7907",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2,  4,  3,  6,  1,  8,  7,  5, 11,  9, 27, 10, 19, 16, 43, 14, 12,\n",
+       "       13, 18])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3['bhk'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "47d951d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location</th>\n",
+       "      <th>size</th>\n",
+       "      <th>total_sqft</th>\n",
+       "      <th>bath</th>\n",
+       "      <th>price</th>\n",
+       "      <th>bhk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1718</th>\n",
+       "      <td>2Electronic City Phase II</td>\n",
+       "      <td>27 BHK</td>\n",
+       "      <td>8000</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>230.0</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4684</th>\n",
+       "      <td>Munnekollal</td>\n",
+       "      <td>43 Bedroom</td>\n",
+       "      <td>2400</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>660.0</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       location        size total_sqft  bath  price  bhk\n",
+       "1718  2Electronic City Phase II      27 BHK       8000  27.0  230.0   27\n",
+       "4684                Munnekollal  43 Bedroom       2400  40.0  660.0   43"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3[df3.bhk>20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c26a50db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1056', '2600', '1440', ..., '1133 - 1384', '774', '4689'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# some total_sqft value are given in ranges like 2100-2850\n",
+    "# we need to convert them into single number\n",
+    "df3.total_sqft.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9a4c5e83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_float(x):\n",
+    "    try:\n",
+    "        float(x)\n",
+    "    except:\n",
+    "        return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2d20d580",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location</th>\n",
+       "      <th>size</th>\n",
+       "      <th>total_sqft</th>\n",
+       "      <th>bath</th>\n",
+       "      <th>price</th>\n",
+       "      <th>bhk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Yelahanka</td>\n",
+       "      <td>4 BHK</td>\n",
+       "      <td>2100 - 2850</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>186.000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>Hebbal</td>\n",
+       "      <td>4 BHK</td>\n",
+       "      <td>3067 - 8156</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>477.000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>8th Phase JP Nagar</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1042 - 1105</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>54.005</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165</th>\n",
+       "      <td>Sarjapur</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1145 - 1340</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>43.490</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>KR Puram</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1015 - 1540</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>56.800</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>410</th>\n",
+       "      <td>Kengeri</td>\n",
+       "      <td>1 BHK</td>\n",
+       "      <td>34.46Sq. Meter</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>18.500</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>549</th>\n",
+       "      <td>Hennur Road</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1195 - 1440</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>63.770</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>648</th>\n",
+       "      <td>Arekere</td>\n",
+       "      <td>9 Bedroom</td>\n",
+       "      <td>4125Perch</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>265.000</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>661</th>\n",
+       "      <td>Yelahanka</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1120 - 1145</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>48.130</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>672</th>\n",
+       "      <td>Bettahalsoor</td>\n",
+       "      <td>4 Bedroom</td>\n",
+       "      <td>3090 - 5002</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>445.000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               location       size      total_sqft  bath    price  bhk\n",
+       "30            Yelahanka      4 BHK     2100 - 2850   4.0  186.000    4\n",
+       "122              Hebbal      4 BHK     3067 - 8156   4.0  477.000    4\n",
+       "137  8th Phase JP Nagar      2 BHK     1042 - 1105   2.0   54.005    2\n",
+       "165            Sarjapur      2 BHK     1145 - 1340   2.0   43.490    2\n",
+       "188            KR Puram      2 BHK     1015 - 1540   2.0   56.800    2\n",
+       "410             Kengeri      1 BHK  34.46Sq. Meter   1.0   18.500    1\n",
+       "549         Hennur Road      2 BHK     1195 - 1440   2.0   63.770    2\n",
+       "648             Arekere  9 Bedroom       4125Perch   9.0  265.000    9\n",
+       "661           Yelahanka      2 BHK     1120 - 1145   2.0   48.130    2\n",
+       "672        Bettahalsoor  4 Bedroom     3090 - 5002   4.0  445.000    4"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3[~df3['total_sqft'].apply(is_float)].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d50c9e76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function that takes the range and make an average\n",
+    "def convert_sqft_to_num(x):\n",
+    "    tokens = x.split('-')\n",
+    "    if len(tokens) == 2:\n",
+    "        return (float(tokens[0]) + float(tokens[1])) / 2\n",
+    "    try:\n",
+    "        return float(x)\n",
+    "    except:\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "56cb0cb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location</th>\n",
+       "      <th>size</th>\n",
+       "      <th>total_sqft</th>\n",
+       "      <th>bath</th>\n",
+       "      <th>price</th>\n",
+       "      <th>bhk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Electronic City Phase II</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1056.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>39.07</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Chikka Tirupathi</td>\n",
+       "      <td>4 Bedroom</td>\n",
+       "      <td>2600.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>120.00</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Uttarahalli</td>\n",
+       "      <td>3 BHK</td>\n",
+       "      <td>1440.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>62.00</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Lingadheeranahalli</td>\n",
+       "      <td>3 BHK</td>\n",
+       "      <td>1521.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>95.00</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Kothanur</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>51.00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   location       size  total_sqft  bath   price  bhk\n",
+       "0  Electronic City Phase II      2 BHK      1056.0   2.0   39.07    2\n",
+       "1          Chikka Tirupathi  4 Bedroom      2600.0   5.0  120.00    4\n",
+       "2               Uttarahalli      3 BHK      1440.0   2.0   62.00    3\n",
+       "3        Lingadheeranahalli      3 BHK      1521.0   3.0   95.00    3\n",
+       "4                  Kothanur      2 BHK      1200.0   2.0   51.00    2"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df4 = df3.copy()\n",
+    "df4[\"total_sqft\"] = df4[\"total_sqft\"].apply(convert_sqft_to_num)\n",
+    "df4.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "265f3f60",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
